# batch-video-converter

./: README.md  config.yml  convert_videos.sh  mise.toml  pyproject.toml  script.py
.github/workflows/: test.yml
configs/: config_mac_m_chip.yml  config_test.yaml
src/: config.py  convert.py  metadata.py  utils.py
tests/: test_failure_metadata.py  test_script.py  test_script_success.py
