[project]
name = "batch-video-converter"
version = "0.1.0"
description = "Batch MP4 video converter using FFmpeg with M2 optimization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
convert-videos = "script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]